codecrafters submit [skip ci]

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,16 +8,9 @@ file(GLOB_RECURSE SOURCE_FILES src/*.cpp src/include/*.hpp)
 
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
-include(FetchContent)
-
-FetchContent_Declare(
-  yaml-cpp
-  GIT_REPOSITORY https://github.com/jbeder/yaml-cpp.git
-  GIT_TAG yaml-cpp-0.8.0 # Can be a tag (yaml-cpp-x.x.x), a commit hash, or a branch name (master)
-)
-FetchContent_MakeAvailable(yaml-cpp)
-
-target_link_libraries(kafka PUBLIC yaml-cpp::yaml-cpp) # The library or executable that require yaml-cpp library
+find_package(yaml-cpp REQUIRED)
 
 add_executable(kafka ${SOURCE_FILES})
+
+target_link_libraries(kafka PRIVATE yaml-cpp::yaml-cpp)
 
